<resources>
    <string name="app_name" translatable="false">Water Balance</string>
    <string name="water_balance_channel" translatable="false">water_balance_channel</string>

    <!-- Notifications -->
    <string name="notification_title">Время пить воду</string>

    <!-- Dialog -->
    <string name="dialog_button_ok">ОК</string>
    <string name="dialog_button_cancel">Отменить</string>
    <string name="dialog_alarm_set">Напоминание установлено на %1$s:%2$s</string>

    <!-- Common -->
    <string name="user_name">Имя</string>
    <string name="user_weight">Вес</string>
    <string name="user_active">Активность</string>
    <string name="active_type_no" translatable="false" />
    <string name="active_type_lazy">Ленивый</string>
    <string name="active_type_middle">Средняя активность</string>
    <string name="active_type_active">Активный</string>

    <!-- Home Screen -->
    <string name="home_screen_title">Главная</string>
    <string name="home_screen_drink">Выпито</string>
    <string name="home_screen_remain">Осталось</string>
    <string name="home_screen_notifications">Уведомления</string>
    <string name="home_screen_morning">Утро</string>
    <string name="home_screen_day">День</string>
    <string name="home_screen_evening">Вечер</string>
    <string name="home_screen_time_value" translatable="false">%1$s:%2$s</string>
    <string name="home_screen_value">%1$.2f мл</string>
    <string name="home_screen_dialog_add_water">Добавить, мл</string>
    <string name="home_screen_dialog_reset_title">Сброс статистики за сегодня</string>
    <string name="home_screen_dialog_reset_message">Вы точно хотите стереть данные за сегодня?</string>

    <!-- Create User Screen -->
    <string name="create_user_screen_title">Создать пользователя</string>
    <string name="create_user_screen_greeting">Добро пожаловать</string>
    <string name="create_user_screen_fill_parameters">Чтобы продолжить, укажите свои данные</string>
    <string name="create_user_screen_next">Далее</string>

    <!-- Settings Screen -->
    <string name="settings_screen_title">Настройки</string>
    <string name="settings_screen_save">Сохранить</string>

</resources>
