<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="ru.nsu.merkuriev.waterbalance.presentation.home.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.home.view.HomeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium">

                    <TextView
                        android:id="@+id/drink"
                        style="@style/TextView.Home"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:gravity="center"
                        android:text="@string/home_screen_drink"
                        app:layout_constraintEnd_toStartOf="@id/bottle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/bottle" />

                    <TextView
                        android:id="@+id/drink_value"
                        style="@style/TextView.Home.SubTitle"
                        android:layout_marginEnd="@dimen/margin_medium"
                        android:gravity="center"
                        android:text="@{@string/home_screen_value(model.drinkWater)}"
                        app:layout_constraintEnd_toStartOf="@id/bottle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/drink" />

                    <TextView
                        android:id="@+id/remain"
                        style="@style/TextView.Home"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:gravity="center"
                        android:text="@string/home_screen_remain"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/bottle"
                        app:layout_constraintTop_toTopOf="@id/bottle" />

                    <TextView
                        android:id="@+id/remain_value"
                        style="@style/TextView.Home.SubTitle"
                        android:layout_marginStart="@dimen/margin_medium"
                        android:gravity="center"
                        android:text="@{@string/home_screen_value(model.remainWater)}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/bottle"
                        app:layout_constraintTop_toBottomOf="@id/remain" />

                    <TextView
                        android:id="@+id/notifications"
                        style="@style/TextView.Home"
                        android:layout_marginTop="@dimen/margin_great"
                        android:text="@string/home_screen_notifications"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/bottle" />

                    <TextView
                        android:id="@+id/morning_title"
                        style="@style/TextView.Home"
                        android:layout_width="wrap_content"
                        android:text="@string/home_screen_morning"
                        app:layout_constraintBottom_toBottomOf="@id/morning_checkbox"
                        app:layout_constraintEnd_toStartOf="@id/morning_time"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/morning_checkbox" />

                    <TextView
                        android:id="@+id/morning_time"
                        style="@style/TextView.Home.Time"
                        android:layout_height="0dp"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/text_medium"
                        android:paddingEnd="@dimen/text_medium"
                        android:text="@{@string/home_screen_time_value(model.morningHour, model.morningMinute)}"
                        app:layout_constraintBottom_toBottomOf="@id/morning_title"
                        app:layout_constraintEnd_toStartOf="@id/morning_checkbox"
                        app:layout_constraintStart_toEndOf="@id/morning_title"
                        app:layout_constraintTop_toTopOf="@id/morning_title"
                        tools:text="10:30" />

                    <CheckBox
                        android:id="@+id/morning_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/notifications" />

                    <TextView
                        android:id="@+id/day_title"
                        style="@style/TextView.Home"
                        android:layout_width="wrap_content"
                        android:text="@string/home_screen_day"
                        app:layout_constraintBottom_toBottomOf="@id/day_checkbox"
                        app:layout_constraintEnd_toStartOf="@id/day_time"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/day_checkbox" />

                    <TextView
                        android:id="@+id/day_time"
                        style="@style/TextView.Home.Time"
                        android:layout_height="0dp"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/text_medium"
                        android:paddingEnd="@dimen/text_medium"
                        android:text="@{@string/home_screen_time_value(model.dayHour, model.dayMinute)}"
                        app:layout_constraintBottom_toBottomOf="@id/day_title"
                        app:layout_constraintEnd_toStartOf="@id/day_checkbox"
                        app:layout_constraintStart_toEndOf="@id/day_title"
                        app:layout_constraintTop_toTopOf="@id/day_title"
                        tools:text="10:30" />

                    <CheckBox
                        android:id="@+id/day_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/morning_checkbox" />

                    <TextView
                        android:id="@+id/evening_title"
                        style="@style/TextView.Home"
                        android:layout_width="wrap_content"
                        android:text="@string/home_screen_evening"
                        app:layout_constraintBottom_toBottomOf="@id/evening_checkbox"
                        app:layout_constraintEnd_toStartOf="@id/evening_time"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/evening_checkbox" />

                    <TextView
                        android:id="@+id/evening_time"
                        style="@style/TextView.Home.Time"
                        android:layout_height="0dp"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/text_medium"
                        android:paddingEnd="@dimen/text_medium"
                        android:text="@{@string/home_screen_time_value(model.eveningHour, model.eveningMinute)}"
                        app:layout_constraintBottom_toBottomOf="@id/evening_title"
                        app:layout_constraintEnd_toStartOf="@id/evening_checkbox"
                        app:layout_constraintStart_toEndOf="@id/evening_title"
                        app:layout_constraintTop_toTopOf="@id/evening_title"
                        tools:text="10:30" />

                    <CheckBox
                        android:id="@+id/evening_checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_medium"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/day_checkbox" />

                    <ru.nsu.merkuriev.waterbalance.presentation.common.custom.ProgressView
                        android:id="@+id/bottle"
                        android:layout_width="50dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="@dimen/margin_great"
                        app:empty_background="@drawable/ic_bottle_empty"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:progress_background="@drawable/ic_bottle_full" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_plus"
                app:fabSize="normal"
                app:layout_anchor="@id/scroll"
                app:layout_anchorGravity="end|bottom" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>